@@ -350,6 +350,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|LinkedHashMap
 import|;
 end_import
@@ -5679,6 +5689,36 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|liveNodes
+init|=
+name|zkStateReader
+operator|.
+name|getZkClient
+argument_list|()
+operator|.
+name|getChildren
+argument_list|(
+name|ZkStateReader
+operator|.
+name|LIVE_NODES_ZKNODE
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+comment|// now we need to walk the collectionProps tree to cross-check replica state with live nodes
+name|crossCheckReplicaStateWithLiveNodes
+argument_list|(
+name|liveNodes
+argument_list|,
+name|collectionProps
+argument_list|)
+expr_stmt|;
 name|NamedList
 argument_list|<
 name|Object
@@ -5774,28 +5814,6 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|// add live_nodes
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|liveNodes
-init|=
-name|zkStateReader
-operator|.
-name|getZkClient
-argument_list|()
-operator|.
-name|getChildren
-argument_list|(
-name|ZkStateReader
-operator|.
-name|LIVE_NODES_ZKNODE
-argument_list|,
-literal|null
-argument_list|,
-literal|true
-argument_list|)
-decl_stmt|;
 name|clusterStatus
 operator|.
 name|add
@@ -5814,6 +5832,258 @@ argument_list|,
 name|clusterStatus
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Walks the tree of collection status to verify that any replicas not reporting a "down" status is    * on a live node, if any replicas reporting their status as "active" but the node is not live is    * marked as "down"; used by CLUSTERSTATUS.    * @param liveNodes List of currently live node names.    * @param collectionProps Map of collection status information pulled directly from ZooKeeper.    */
+DECL|method|crossCheckReplicaStateWithLiveNodes
+specifier|protected
+name|void
+name|crossCheckReplicaStateWithLiveNodes
+parameter_list|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|liveNodes
+parameter_list|,
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|collectionProps
+parameter_list|)
+block|{
+name|Iterator
+argument_list|<
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|>
+name|colls
+init|=
+name|collectionProps
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|colls
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|next
+init|=
+name|colls
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|collMap
+init|=
+operator|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+operator|)
+name|next
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|shards
+init|=
+operator|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+operator|)
+name|collMap
+operator|.
+name|get
+argument_list|(
+literal|"shards"
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|Object
+name|nextShard
+range|:
+name|shards
+operator|.
+name|values
+argument_list|()
+control|)
+block|{
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|shardMap
+init|=
+operator|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+operator|)
+name|nextShard
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|replicas
+init|=
+operator|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+operator|)
+name|shardMap
+operator|.
+name|get
+argument_list|(
+literal|"replicas"
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|Object
+name|nextReplica
+range|:
+name|replicas
+operator|.
+name|values
+argument_list|()
+control|)
+block|{
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|replicaMap
+init|=
+operator|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+operator|)
+name|nextReplica
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|ZkStateReader
+operator|.
+name|DOWN
+operator|.
+name|equals
+argument_list|(
+name|replicaMap
+operator|.
+name|get
+argument_list|(
+name|ZkStateReader
+operator|.
+name|STATE_PROP
+argument_list|)
+argument_list|)
+condition|)
+block|{
+comment|// not down, so verify the node is live
+name|String
+name|node_name
+init|=
+operator|(
+name|String
+operator|)
+name|replicaMap
+operator|.
+name|get
+argument_list|(
+name|ZkStateReader
+operator|.
+name|NODE_NAME_PROP
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|liveNodes
+operator|.
+name|contains
+argument_list|(
+name|node_name
+argument_list|)
+condition|)
+block|{
+comment|// node is not live, so this replica is actually down
+name|replicaMap
+operator|.
+name|put
+argument_list|(
+name|ZkStateReader
+operator|.
+name|STATE_PROP
+argument_list|,
+name|ZkStateReader
+operator|.
+name|DOWN
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+block|}
+block|}
 block|}
 comment|/**    * Get collection status from cluster state.    * Can return collection status by given shard name.    *    *    * @param collection collection map parsed from JSON-serialized {@link ClusterState}    * @param name  collection name    * @param shardStr comma separated shard names    * @return map of collection properties    */
 annotation|@
